--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Stylish Portfolio - Start Bootstrap Template</title>
+  <title>Kameshwara's website</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -69,10 +69,10 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-          <p class="lead mb-5">This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
-            <a href="https://unsplash.com/">Unsplash</a>!</p>
-          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
+          <h2>Software Engineering intern</h2>
+          <p class="lead mb-5">Aspiring Software Engineer with experience in Computer programming and Web development. Currently doing 3rd year in the Software Engineering degree program at the University of Calgary. An innovative and hardworking student actively looking for opportunities to express talents. Possess good communication and planning skills with strong judgment and critical thinking abilities. I am looking forward to opportunities to gain some industry experience and course knowledge.
+            </p>
+          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">Know my skills</a>
         </div>
       </div>
     </div>
@@ -82,7 +82,7 @@
   <section class="content-section bg-primary text-white text-center" id="services">
     <div class="container">
       <div class="content-section-heading">
-        <h3 class="text-secondary mb-0">Services</h3>
+       <!-- <h3 class="text-secondary mb-0">Services</h3> -->
         <h2 class="mb-5">My Skills</h2>
       </div>
       <div class="row">
@@ -91,38 +91,38 @@
             <i class="icon-screen-smartphone"></i>
           </span>
           <h4>
-            <strong>Responsive</strong>
+            <strong>Responsive Web Design</strong>
           </h4>
-          <p class="text-faded mb-0">Looks great on any screen size!</p>
+          <!--<p class="text-faded mb-0">Looks great on any screen size!</p>-->
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-pencil"></i>
           </span>
           <h4>
-            <strong>Redesigned</strong>
+            <strong>Object oriented programming</strong>
           </h4>
-          <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p>
+          <!--<p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p>-->
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-like"></i>
           </span>
           <h4>
-            <strong>Favorited</strong>
+            <strong>Python, Java and C++</strong>
           </h4>
-          <p class="text-faded mb-0">Millions of users
+          <!--<p class="text-faded mb-0">Millions of users
             <i class="fas fa-heart"></i>
-            Start Bootstrap!</p>
+            Start Bootstrap!</p>-->
         </div>
         <div class="col-lg-3 col-md-6">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-mustache"></i>
           </span>
           <h4>
-            <strong>Question</strong>
+            <strong>Team player</strong>
           </h4>
-          <p class="text-faded mb-0">I mustache you a question...</p>
+        <!--  <p class="text-faded mb-0">I mustache you a question...</p> -->
         </div>
       </div>
     </div>
@@ -131,10 +131,8 @@
   <!-- Callout -->
   <section class="callout">
     <div class="container text-center">
-      <h2 class="mx-auto mb-5">Welcome to
-        <em>your</em>
-        next website!</h2>
-      <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/themes/stylish-portfolio/">Download Now!</a>
+      <h2 class="mx-auto mb-5"> To know more about me download my <em> Resume!</em></h2>
+      <a class="btn btn-primary btn-xl" href="kameshwara_sekar_resume.pdf">Download Now!</a>
     </div>
   </section>
 
@@ -150,8 +148,9 @@
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">Stationary</div>
-                <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                <div class="h2">Robotic Arm using inverse Kinematics</div>
+                <!--<p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>-->
+                  <p class="mb-0">Yet to be uploaded...</p>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
