--- a/index.html
+++ b/index.html
@@ -218,22 +218,22 @@
     <div class="container">
       <ul class="list-inline mb-5">
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="#!">
+          <a class="social-link rounded-circle text-white mr-3" href="https://www.facebook.com/kameshwara4">
             <i class="icon-social-facebook"></i>
           </a>
         </li>
-        <li class="list-inline-item">
+        <!--<li class="list-inline-item">
           <a class="social-link rounded-circle text-white mr-3" href="#!">
             <i class="icon-social-twitter"></i>
           </a>
-        </li>
+        </li>-->
         <li class="list-inline-item">
           <a class="social-link rounded-circle text-white" href="https://github.com/kameshwarasekar">
             <i class="icon-social-github"></i>
           </a>
         </li>
       </ul>
-      <p class="text-muted small mb-0">Copyright &copy; Your Website 2020</p>
+      <p class="text-muted small mb-0">Copyright &copy; Kameshwara Sekar Website 2020</p>
     </div>
   </footer>
 
