--- a/index.html
+++ b/index.html
@@ -222,11 +222,11 @@
             <i class="icon-social-facebook"></i>
           </a>
         </li>
-        <!--<li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="#!">
-            <i class="icon-social-twitter"></i>
+        <li class="list-inline-item">
+          <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/kameshwara-sekar-995592192/">
+            <i class="icon-social-linkedin"></i>
           </a>
-        </li>-->
+        </li>
         <li class="list-inline-item">
           <a class="social-link rounded-circle text-white" href="https://github.com/kameshwarasekar">
             <i class="icon-social-github"></i>
