--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 
 <head>
-
+    
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="personal website">
   <meta name="author" content="kameshwara">
 
   <title>Kameshwara's website</title>
+   
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> 
 
+    
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -24,7 +27,7 @@
 </head>
 
 <body id="page-top">
-
+<i class="material-icons md-36">important_devices</i>
   <!-- Navigation -->
   <a class="menu-toggle rounded" href="#">
     <i class="fas fa-bars"></i>
@@ -117,7 +120,9 @@
         </div>
         <div class="col-lg-3 col-md-6">
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-mustache"></i>
+              <i class="material-icons">code</i>
+<!--            <i class="icon-mustache"></i>-->
+<!--               <i class="fas fa-code">-->
           </span>
           <h4>
             <strong>Team player</strong>
@@ -162,8 +167,8 @@
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">Ice Cream</div>
-                <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                <div class="h2">Projects</div>
+<!--                <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>-->
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
@@ -173,13 +178,14 @@
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">Strawberries</div>
-                <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                <div class="h2">Interests</div>
+<!--                <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>-->
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
           </a>
         </div>
+<!--
         <div class="col-lg-6">
           <a class="portfolio-item" href="#!">
             <div class="caption">
@@ -192,6 +198,7 @@
           </a>
         </div>
       </div>
+-->
     </div>
   </section>
 
