--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body id="page-top">
-<i class="material-icons md-36">important_devices</i>
+<i class="material-icons md-36">code</i>
   <!-- Navigation -->
   <a class="menu-toggle rounded" href="#">
     <i class="fas fa-bars"></i>
@@ -100,8 +100,9 @@
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-pencil"></i>
-          </span>
+<!--            <i class="icon-pencil"></i>-->
+            <i class="material-icons">important_devices</i>
+            </span>
           <h4>
             <strong>Object oriented programming</strong>
           </h4>
@@ -109,8 +110,9 @@
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-like"></i>
-          </span>
+<!--            <i class="icon-like"></i>-->
+ <i class="material-icons">code</i>
+            </span>
           <h4>
             <strong>Python, Java and C++</strong>
           </h4>
@@ -120,7 +122,7 @@
         </div>
         <div class="col-lg-3 col-md-6">
           <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="material-icons">code</i>
+              <i class="material-icons">group</i>
 <!--            <i class="icon-mustache"></i>-->
 <!--               <i class="fas fa-code">-->
           </span>
