updating the website

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body id="page-top">
-<i class="material-icons md-36">code</i>
+<!--<i class="material-icons md-36">code</i>-->
   <!-- Navigation -->
   <a class="menu-toggle rounded" href="#">
     <i class="fas fa-bars"></i>
@@ -44,13 +44,10 @@
         <a class="js-scroll-trigger" href="#about">About</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#services">Services</a>
+        <a class="js-scroll-trigger" href="#services">My Skills</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
-      </li>
-      <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#contact">Contact</a>
       </li>
     </ul>
   </nav>
@@ -98,6 +95,26 @@
           </h4>
           <!--<p class="text-faded mb-0">Looks great on any screen size!</p>-->
         </div>
+        <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+          <span class="service-icon rounded-circle mx-auto mb-3">
+            <i class="icon-screen-smartphone"></i>
+          </span>
+          <h4>
+            <strong>Responsive Web Design</strong>
+          </h4>
+          <!--<p class="text-faded mb-0">Looks great on any screen size!</p>-->
+        </div>
+<!--
+        <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+          <span class="service-icon rounded-circle mx-auto mb-3">
+            <i class="icon-screen-smartphone"></i>
+          </span>
+          <h4>
+            <strong>Responsive Web Design</strong>
+          </h4>
+          <p class="text-faded mb-0">Looks great on any screen size!</p>
+        </div>
+-->
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
 <!--            <i class="icon-pencil"></i>-->
@@ -158,7 +175,7 @@
             <div class="caption">
               <div class="caption-content">
                 <div class="h2">Robotic Arm using inverse Kinematics</div>
-                <!--<p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>-->
+<!--                <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>-->
                   <p class="mb-0">Yet to be uploaded...</p>
               </div>
             </div>
